madvise.2: Split EINVAL error into separate cases
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -329,32 +329,29 @@ A kernel resource was temporarily unavailable.
 The map exists, but the area maps something that isn't a file.
 .TP
 .B EINVAL
-This error can occur for the following reasons:
-.RS
-.IP * 3
-The value
+.I addr
+is not page-aligned or
 .I length
 is negative.
 .\" .I length
 .\" is zero,
-.IP *
-.I addr
-is not page-aligned.
-.IP *
+.TP
+.B EINVAL
 .I advice
-is not a valid value
-.IP *
-The application is attempting to release locked or shared pages (with
-.BR MADV_DONTNEED ).
-.IP *
+is not a valid.
+.TP
+.B EINVAL
+.RB ( MADV_DONTNEED )
+The application is attempting to release locked or shared pages.
+.TP
+.B EINVAL
+.I advice
+is
 .BR MADV_MERGEABLE
 or
-.BR MADV_UNMERGEABLE
-was specified in
-.IR advice ,
+.BR MADV_UNMERGEABLE ,
 but the kernel was not configured with
 .BR CONFIG_KSM .
-.RE
 .TP
 .B EIO
 (for
