madvise.2: Remove mention of "shared pages" as a cause of EINVAL for MADV_DONTNEED
Reported-by: Vlastimil Babka <vbabka@suse.cz>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -342,7 +342,7 @@ is not a valid.
 .TP
 .B EINVAL
 .RB ( MADV_DONTNEED )
-The application is attempting to release locked or shared pages.
+The application is attempting to release locked pages.
 .TP
 .B EINVAL
 .I advice
