--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -342,7 +342,7 @@ is not a valid.
 .TP
 .B EINVAL
 .RB ( MADV_DONTNEED )
-The application is attempting to release locked pages.
+The application is attempting to release locked or Huge TLB pages.
 .TP
 .B EINVAL
 .I advice
