madvise.2: MADV_DONTNEED cannot be applied to Huge TLB or locked pages
See mm/madvise.c::madvise_dontneed()

Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -120,6 +120,7 @@ either in reloading of the memory contents from the underlying mapped file
 .BR mmap (2))
 or zero-fill-on-demand pages for mappings
 without an underlying file.
+This flag cannot be applied to locked pages or Huge TLB pages.
 .\"
 .\" ======================================================================
 .\"
