madvise.2: MADV_REMOVE cannot be applied to locked or Huge TLB pages
See mm/madvise.c::madvise_remove()

Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -146,6 +146,7 @@ error
 .\" bufferpool (shared memory segments) - without writing back to
 .\" disk/swap space.  This feature is also useful for supporting
 .\" hot-plug memory on UML.
+This flag cannot be applied to locked pages or Huge TLB pages.
 .TP
 .BR MADV_DONTFORK " (since Linux 2.6.16)"
 .\" commit f822566165dd46ff5de9bf895cfa6c51f53bb0c4
@@ -342,8 +343,12 @@ is negative.
 is not a valid.
 .TP
 .B EINVAL
-.RB ( MADV_DONTNEED )
-The application is attempting to release locked or Huge TLB pages.
+.I advice
+is
+.B MADV_DONTNEED
+or
+.BR MADV_REMOVE
+and the specified address range includes locked or Huge TLB pages.
 .TP
 .B EINVAL
 .I advice
