madvise.2: MADV_REMOVE can be applied only to shared writable mappings
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -146,6 +146,7 @@ error
 .\" bufferpool (shared memory segments) - without writing back to
 .\" disk/swap space.  This feature is also useful for supporting
 .\" hot-plug memory on UML.
+The specified address range must be mapped shared and writable.
 This flag cannot be applied to locked pages or Huge TLB pages.
 .TP
 .BR MADV_DONTFORK " (since Linux 2.6.16)"
@@ -323,6 +324,12 @@ On error, it returns \-1 and
 .I errno
 is set appropriately.
 .SH ERRORS
+.TP
+.B EACCES
+.I advice
+is
+.BR MADV_REMOVE ,
+but the specified address range is not a shared writable mapping.
 .TP
 .B EAGAIN
 A kernel resource was temporarily unavailable.
