madvise.2: ERRORS: add EPERM error case for MADV_HWPOISON
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -380,6 +380,14 @@ Not enough memory: paging in failed.
 .B ENOMEM
 Addresses in the specified range are not currently
 mapped, or are outside the address space of the process.
+.TP
+.B EPERM
+.I advice
+is
+.BR MADV_HWPOISON ,
+but the caller does not have the
+.B CAP_SYS_ADMIN
+capability.
 .SH VERSIONS
 Since Linux 3.18,
 .\" commit d3ac21cacc24790eb45d735769f35753f5b56ceb
