--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -114,7 +114,8 @@ Expect access in the near future.
 Do not expect access in the near future.
 (For the time being, the application is finished with the given range,
 so the kernel can free resources associated with it.)
-Subsequent accesses of pages in this range will succeed, but will result
+If the operations succeeds,
+subsequent accesses of pages in this range will succeed, but will result
 either in reloading of the memory contents from the underlying mapped file
 (see
 .BR mmap (2))
