madvise.2: Note that madvise() is nonstandard, but widespread
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -397,6 +397,16 @@ depending on the setting of the
 .B CONFIG_ADVISE_SYSCALLS
 configuration option.
 .SH CONFORMING TO
+.BR madvise ()
+is not specified by any standards.
+Versions of this system call, implementing a wide variety of
+.I advice
+values, exist on many other implementations.
+Other implementations typically implement at least the flags listed
+above under
+.IR "Convention advice flags" ,
+albeit with some variation in semantics.
+
 POSIX.1-2001 describes
 .BR posix_madvise (3)
 with constants
