madvise.2: Explain MADV_REMOVE in terms of file hole punching
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -138,6 +138,12 @@ interface available on other implementations:
 .\" commit f6b3ec238d12c8cc6cc71490c6e3127988460349
 Free up a given range of pages
 and its associated backing store.
+This is equivalent to punching a hole in the corresponding byte
+range of the backing store (see
+.BR fallocate (2)).
+Subsequent accesses in the specified address range will see
+bytes containing zero.
+
 Currently,
 .\" 2.6.18-rc5
 only shmfs/tmpfs supports this; other filesystems return with the
