madvise.2: Tweaks to Jan Chaloupka's patch
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -148,18 +148,17 @@ bytes containing zero.
 .\" disk/swap space.  This feature is also useful for supporting
 .\" hot-plug memory on UML.
 
-Originally, only shmfs/tmpfs supported this; but since Linux 3.5,
+In the initial implementation, only shmfs/tmpfs supported
+.BR MADV_REMOVE ;
+but since Linux 3.5,
+.\" commit 3f31d07571eeea18a7d34db9af21d2285b807a17
 any filesystem which supports the
-.BR fallocate(2)
-mode
+.BR fallocate (2)
 .BR FALLOC_FL_PUNCH_HOLE
-also supports the
-.BR madvise(2)
-advice
+mode also supports the
 .BR MADV_REMOVE .
-Other filesystems return with the
-.BR EOPNOTSUPP
-error.
+Other filesystems fail with the error
+.BR EOPNOTSUPP .
 
 The specified address range must be mapped shared and writable.
 This flag cannot be applied to locked pages or Huge TLB pages.
