madvise.2: Minor fixes: miscellaneous wfix/tfix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -91,7 +91,7 @@ function, and the values have the same meanings, with the exception of
 .LP
 The advice is indicated in the
 .I advice
-argument which is one of the following:
+argument, which is one of the following:
 .TP
 .B MADV_NORMAL
 No special treatment.
@@ -164,7 +164,7 @@ but since Linux 3.5,
 any filesystem which supports the
 .BR fallocate (2)
 .BR FALLOC_FL_PUNCH_HOLE
-mode also supports the
+mode also supports
 .BR MADV_REMOVE .
 Other filesystems fail with the error
 .BR EOPNOTSUPP .
@@ -175,10 +175,10 @@ Other filesystems fail with the error
 Do not make the pages in this range available to the child after a
 .BR fork (2).
 This is useful to prevent copy-on-write semantics from changing
-the physical location of a page(s) if the parent writes to it after a
+the physical location of a page if the parent writes to it after a
 .BR fork (2).
 (Such page relocations cause problems for hardware that
-DMAs into the page(s).)
+DMAs into the page.)
 .\" [PATCH] madvise MADV_DONTFORK/MADV_DOFORK
 .\" Currently, copy-on-write may change the physical address of
 .\" a page even if the user requested that the page is pinned in
@@ -282,7 +282,7 @@ and
 .\" commit 0af4e98b6b095c74588af04872f83d333c958c32
 .\" http://lwn.net/Articles/358904/
 .\" https://lwn.net/Articles/423584/
-Enables Transparent Huge Pages (THP) for pages in the range specified by
+Enable Transparent Huge Pages (THP) for pages in the range specified by
 .I addr
 and
 .IR length .
@@ -337,7 +337,7 @@ file (see
 Undo the effect of an earlier
 .BR MADV_DONTDUMP .
 .SH RETURN VALUE
-On success
+On success,
 .BR madvise ()
 returns zero.
 On error, it returns \-1 and
@@ -423,7 +423,7 @@ Versions of this system call, implementing a wide variety of
 values, exist on many other implementations.
 Other implementations typically implement at least the flags listed
 above under
-.IR "Convention advice flags" ,
+.IR "Conventional advice flags" ,
 albeit with some variation in semantics.
 
 POSIX.1-2001 describes
@@ -435,11 +435,11 @@ with constants
 .BR POSIX_MADV_WILLNEED ,
 and
 .BR POSIX_MADV_DONTNEED ,
-and so on, with a behavior close to the similarly named flags listed above.
+and so on, with behavior close to the similarly named flags listed above.
 (POSIX.1-2008 adds a further flag,
 .BR POSIX_MADV_NOREUSE ,
 that has no analog in
-.BR madvise (2)).
+.BR madvise (2).)
 .SH NOTES
 .SS Linux notes
 .LP
