--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -114,14 +114,20 @@ Expect access in the near future.
 Do not expect access in the near future.
 (For the time being, the application is finished with the given range,
 so the kernel can free resources associated with it.)
-If the operations succeeds,
-subsequent accesses of pages in this range will succeed, but will result
+
+After a successful
+.B MADV_DONTNEED
+operation,
+the semantics of memory access in the specified region are changed:
+subsequent accesses of pages in the range will succeed, but will result
 either in reloading of the memory contents from the underlying mapped file
 (see
 .BR mmap (2))
 or zero-fill-on-demand pages for mappings
 without an underlying file.
-This flag cannot be applied to locked pages or Huge TLB pages.
+
+.B MADV_DONTNEED
+cannot be applied to locked pages or Huge TLB pages.
 .\"
 .\" ======================================================================
 .\"
