stdio_ext.3: Modify thread-safety information
Change the thread safety information to be the same as glibc.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/stdio_ext.3
+++ b/man3/stdio_ext.3
@@ -143,7 +143,7 @@ T{
 .br
 .BR __fpurge (),
 .BR __fsetlocking ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Safe race:stream
 T{
 .BR __flbf (),
 .BR __freadable (),
