--- a/man3/canonicalize_file_name.3
+++ b/man3/canonicalize_file_name.3
@@ -70,6 +70,18 @@ to indicate the error.
 .SH ERRORS
 See
 .BR realpath (3).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see 
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR canonicalize_file_name ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function is a GNU extension.
 .SH SEE ALSO
