tsearch.3: ATTRIBUTES: Note functions that are thread-safe
The functions' markings match glibc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/tsearch.3
+++ b/man3/tsearch.3
@@ -187,6 +187,27 @@ also
 return NULL if
 .IR rootp
 was NULL on entry.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR tsearch (),
+.BR tfind (),
+.br
+.BR tdelete ()
+T}	Thread safety	MT-Safe race:rootp
+T{
+.BR twalk ()
+T}	Thread safety	MT-Safe race:root
+T{
+.BR tdestroy ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001.
 The function
