--- a/man3/catan.3
+++ b/man3/catan.3
@@ -33,6 +33,20 @@ One has:
 .fi
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface  Attribute   Value
+T{
+.BR catan (),
+.BR catanf (),
+.BR catanl ()
+T} Thread safety   MT-Safe
+.TE
 .SH CONFORMING TO
 C99.
 .SH EXAMPLE
