--- a/man3/nan.3
+++ b/man3/nan.3
@@ -72,6 +72,20 @@ selects one.
 On other systems it may do nothing.
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR nan (),
+.BR nanf (),
+.BR nanl ()
+T}	Thread safety	MT-Safe locale
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 See also IEC 559 and the appendix with
