--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -138,7 +138,8 @@ values have no counterparts in the POSIX-specified
 .BR posix_madvise (3),
 and may or may not have counterparts in the
 .BR madvise ()
-interface available on other implementations:
+interface available on other implementations.
+Note that some of these operations change the semantics of memory accesses.
 .TP
 .BR MADV_REMOVE " (since Linux 2.6.16)"
 .\" commit f6b3ec238d12c8cc6cc71490c6e3127988460349
