tmpfile.3: ATTRIBUTES: Note function that is thread-safe
It's markings match glibc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/tmpfile.3
+++ b/man3/tmpfile.3
@@ -75,6 +75,18 @@ There was no room in the directory to add the new filename.
 .TP
 .B EROFS
 Read-only filesystem.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR tmpfile ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, C89, C99, SUSv2, POSIX.1-2001.
 .SH NOTES
