madvise.2: Clarifications for MADV_DONTNEED
Reported-by: Vlastimil Babka <vbabka@suse.cz>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -120,11 +120,10 @@ After a successful
 operation,
 the semantics of memory access in the specified region are changed:
 subsequent accesses of pages in the range will succeed, but will result
-either in reloading of the memory contents from the underlying mapped file
-(see
-.BR mmap (2))
-or zero-fill-on-demand pages for mappings
-without an underlying file.
+in either reloading of the memory contents from the underlying mapped file
+(for shared file mappings, shared anonymous mappings,
+and shmem-based techniques such as System V shared memory segments)
+or zero-fill-on-demand pages for anonymous private mappings.
 
 .B MADV_DONTNEED
 cannot be applied to locked pages or Huge TLB pages.
