--- a/man2/futex.2
+++ b/man2/futex.2
@@ -1125,7 +1125,7 @@ on Linux, the symbolic names
 .B EAGAIN
 and
 .B EWOULDBLOCK
-(both of which appear in differnt parts of the kernel futex code)
+(both of which appear in different parts of the kernel futex code)
 have the same value.
 .TP
 .B EAGAIN
@@ -1425,7 +1425,7 @@ Glibc does not provide a wrapper for this system call; call it using
 .\" FIXME Is it worth having an example program?
 .\" FIXME Anything obviously broken in the example program?
 .\"
-The program below deomonstrates use of futexes in a program
+The program below demonstrates use of futexes in a program
 where parent and child use a pair of futexes located inside a
 shared anonymous mapping to synchronize access to a shared resource:
 the terminal.
