realpath.3: ATTRIBUTES: Note function that is thread-safe
The marking matches glibc marking.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/realpath.3
+++ b/man3/realpath.3
@@ -132,6 +132,18 @@ The named file does not exist.
 .TP
 .B ENOTDIR
 A component of the path prefix is not a directory.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR realpath ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 4.4BSD, POSIX.1-2001.
 
