mbstowcs.3: ATTRIBUTES: Note function that is thread-safe
The marking matches glibc marking.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/mbstowcs.3
+++ b/man3/mbstowcs.3
@@ -91,6 +91,18 @@ If an invalid multibyte sequence was
 encountered,
 .I (size_t)\ \-1
 is returned.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR mbstowcs ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
