ioctl_fat.2: Minor fixes
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/ioctl_fat.2
+++ b/man2/ioctl_fat.2
@@ -157,17 +157,17 @@ struct __fat_dirent {
 The first entry in the array is for the short filename.
 The second entry is for the long filename.
 .PP
-Fields
+The
 .I d_ino
 and
 .I d_off
-are only filled for long filenames.
-Field
+fields are filled only for long filenames.
+The
 .I d_ino
-holds the inode number of the directory.
-Field
+field holds the inode number of the directory.
+The
 .I d_off
-holds the offset of the file entry in the directory.
+field holds the offset of the file entry in the directory.
 As these values are not available for short filenames, the user code should
 simply ignore them.
 .PP
@@ -175,10 +175,12 @@ The field
 .I d_reclen
 contains the length of the filename in the field
 .IR d_name .
-To keep backwards compatibility a length of 0 for the short filename signals
+To keep backward compatibility, a length of 0 for the short filename signals
 that the end of the directory has been reached.
-The user code should rely on the return value to identify the end of the
-directory.
+However, the preferred method for detecting the end of the directory
+is to test the
+.BR ioctl ()
+return value.
 If no long filename exists, field
 .I d_reclen
 is set to 0 and
