--- a/man2/madvise.2
+++ b/man2/madvise.2
@@ -133,7 +133,16 @@ The resident set size (RSS) of the calling process will be immediately
 reduced however.
 
 .B MADV_DONTNEED
-cannot be applied to locked pages or Huge TLB pages.
+cannot be applied to locked pages, Huge TLB pages, or
+.BR VM_PFNMAP
+pages.
+(Pages marked with the kernel-internal
+.B VM_PFNMAP
+.\" http://lwn.net/Articles/162860/
+flag are special memory areas that are not managed
+by the virtual memory subsystem.
+Such pages are typically created by device drivers that
+map the pages into user space.)
 .\"
 .\" ======================================================================
 .\"
@@ -162,7 +171,9 @@ bytes containing zero.
 .\" hot-plug memory on UML.
 
 The specified address range must be mapped shared and writable.
-This flag cannot be applied to locked pages or Huge TLB pages.
+This flag cannot be applied to locked pages, Huge TLB pages, or
+.BR VM_PFNMAP
+pages.
 
 In the initial implementation, only shmfs/tmpfs supported
 .BR MADV_REMOVE ;
@@ -382,7 +393,9 @@ is
 .B MADV_DONTNEED
 or
 .BR MADV_REMOVE
-and the specified address range includes locked or Huge TLB pages.
+and the specified address range includes locked, Huge TLB pages, or
+.B VM_PFNMAP
+pages.
 .TP
 .B EINVAL
 .I advice
