getpwent.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be the same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/getpwent.3
+++ b/man3/getpwent.3
@@ -156,16 +156,17 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw22 lb lb
+lbw11 lb lbw41
 l l l.
 Interface	Attribute	Value
 T{
 .BR getpwent ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:pwent race:pwentbuf locale
 T{
 .BR setpwent (),
+.br
 .BR endpwent ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Unsafe race:pwent locale
 .TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
