--- a/man3/getgrent.3
+++ b/man3/getgrent.3
@@ -168,16 +168,16 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw22 lb lb
+lbw11 lb lbw41
 l l l.
 Interface	Attribute	Value
 T{
 .BR getgrent ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:grent race:grentbuf locale
 T{
 .BR setgrent (),
 .BR endgrent ()
-T}	Thread safety	MT-Safe
+T}	Thread safety	MT-Unsafe race:grent locale
 .TE
 .SH CONFORMING TO
 SVr4, 4.3BSD, POSIX.1-2001.
