backtrace.3: ATTRIBUTES: Note function that is thread-safe
The markings match glibc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/backtrace.3
+++ b/man3/backtrace.3
@@ -140,6 +140,22 @@ on error, NULL is returned.
 and
 .BR backtrace_symbols_fd ()
 are provided in glibc since version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw22 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR backtrace (),
+.br
+.BR backtrace_symbols (),
+.br
+.BR backtrace_symbols_fd ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 These functions are GNU extensions.
 .SH NOTES
