remainder.3: ATTRIBUTES: Note function that is thread-safe
The markings match glibc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/remainder.3
+++ b/man3/remainder.3
@@ -177,6 +177,25 @@ is set to
 An invalid floating-point exception
 .RB ( FE_INVALID )
 is raised.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw26 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR drem (),
+.BR dremf (),
+.BR dreml (),
+.br
+.BR remainder (),
+.BR remainderf (),
+.br
+.BR remainderl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .\" IEC 60559.
 The functions
