ecvt_r.3: ATTRIBUTES: Note function that is thread-safe
The markings match glibc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ecvt_r.3
+++ b/man3/ecvt_r.3
@@ -85,6 +85,22 @@ and
 .BR qecvt (3).
 .SH RETURN VALUE
 These functions return 0 on success, and \-1 otherwise.
++.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw20 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR ecvt_r (),
+.BR fcvt_r (),
+.br
+.BR qecvt_r (),
+.BR qfcvt_r ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 These functions are GNU extensions.
 .SH NOTES
