--- a/man3/fopen.3
+++ b/man3/fopen.3
@@ -243,6 +243,20 @@ for any of the errors specified for the routines
 .BR fclose (3),
 and
 .BR fflush (3).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fopen (),
+.BR fdopen (),
+.BR freopen ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The
 .BR fopen ()
