opendir.3: ATTRIBUTES: Note function that is thread-safe
The markings match glibc markings.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/opendir.3
+++ b/man3/opendir.3
@@ -115,6 +115,19 @@ Insufficient memory to complete the operation.
 .SH VERSIONS
 .BR fdopendir ()
 is available in glibc since version 2.4.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw22 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR opendir (),
+.BR fdopendir ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR opendir ()
 is present on SVr4, 4.3BSD, and specified in POSIX.1-2001.
