fopencookie.3: ATTRIBUTES: Note function that is thread-safe
The marking matches glibc marking.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/fopencookie.3
+++ b/man3/fopencookie.3
@@ -242,6 +242,18 @@ returns a pointer to the new stream.
 On error, NULL is returned.
 .\" .SH ERRORS
 .\" It's not clear if errno ever gets set...
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fopencookie ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function is a nonstandard GNU extension.
 .SH EXAMPLE
