--- a/man3/fgetwc.3
+++ b/man3/fgetwc.3
@@ -67,6 +67,19 @@ Apart from the usual ones, there is
 .B EILSEQ
 The data obtained from the input stream does not
 form a valid character.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw17 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fgetwc (),
+.BR getwc ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH NOTES
