--- a/man3/fgetws.3
+++ b/man3/fgetws.3
@@ -49,6 +49,18 @@ The
 function, if successful, returns \fIws\fP.
 If end of stream
 was already reached or if an error occurred, it returns NULL.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fgetws ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 .SH NOTES
