--- a/man3/getpwent.3
+++ b/man3/getpwent.3
@@ -156,12 +156,16 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw11 lb lbw41
+lbw11 lb lb
 l l l.
 Interface	Attribute	Value
 T{
 .BR getpwent ()
-T}	Thread safety	MT-Unsafe race:pwent race:pwentbuf locale
+T}	Thread safety	T{
+MT-Unsafe race:pwent
+.br
+race:pwentbuf locale
+T}
 T{
 .BR setpwent (),
 .br
