--- a/man3/getgrent.3
+++ b/man3/getgrent.3
@@ -168,12 +168,16 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw11 lb lbw41
+lbw11 lb lb
 l l l.
 Interface	Attribute	Value
 T{
 .BR getgrent ()
-T}	Thread safety	MT-Unsafe race:grent race:grentbuf locale
+T}	Thread safety	T{
+MT-Unsafe race:grent
+.br
+race:grentbuf locale
+T}
 T{
 .BR setgrent (),
 .BR endgrent ()
